# library-management-system

./: .gitignore  design.txt  library-management-system.drawio  manage.py  pyproject.toml  shell.nix
lms/: settings.py  urls.py
static/js/: utils.js
static/styles/: form.css  styles.css
templates/: base.html  book-lending.html  book-return.html  borrowed-books-form.html  borrowed-books.html  cart.html  error.html  form-failure.html  form-success.html  index.html  loggedin_index.html  login.html  payment.html  rent.html  signup.html
